--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Ankit</title>
         <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.css">
-        <!-- <link rel="stylesheet" type="text/css" href="css/vendor/flat-ui.css"> -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <section>
             <h1>Ankit Ranjan</h1>
-            <nav>
+            <nav class="hidden-sm hidden-xs">
                 <h3>
-                    <a target="_blank" class="pull-left" href="http://think.ankit.io">Blog</a> <a target="_blank" href="http://www.github.com/ankitr">Github</a> <a target="_blank" class="pull-right" href="http://www.twitter.com/ankitr_">Twitter</a>
+                    <a target="_blank" class="pull-left" href="http://think.ankit.io">Blog</a>
+                    <a target="_blank" href="http://www.github.com/ankitr">Github</a>
+                    <a target="_blank" class="pull-right" href="http://www.twitter.com/ankitr_">Twitter</a>
                 </h3>
+            </nav>
+            <nav class="visible-sm visible-xs">
+                <h3><a target="_blank" href="http://think.ankit.io">Blog</a></h3>
+                <h3><a target="_blank" href="http://www.github.com/ankitr">Github</a></h3>
+                <h3><a target="_blank" href="http://www.twitter.com/ankitr_">Twitter</a></h3>
             </nav>
         </section>
         <footer>
-            <h4><span id="quote">If passion drives you, let reason hold the reins.</span> &mdash; <span id="author">Benjamin Franklin</span></h4>
+            <h4><q>If passion drives you, let reason hold the reins.</q> <cite> &mdash; Benjamin Franklin</cite></h4>
         </footer>
         <script type="text/javascript">
             var quotes = [['If passion drives you, let reason hold the reins.', 'Benjamin Franklin'],
@@ -29,7 +36,7 @@
                           ['I attribute my success to this: I never gave or took any excuse.', 'Florence Nightingale'],
                           ['The past is a ghost, the future a dream. All we ever have is now.', 'Bill Cosby'],
                           ['We become what we think about.', 'Earl Nightingale'],
-                          ['Your time is limited, so don\'t waste it living someone else’s life.', 'Steve Jobs'],
+                          ['Your time is limited, so don\'t waste it living someone else\'s life.', 'Steve Jobs'],
                           ['The two most important days in your life are the day you are born and the day you find out why.', 'Mark Twain'],
                           ['We can easily forgive a child who is afraid of the dark; the real tragedy of life is when men are afraid of the light.', 'Plato'],
                           ['Start where you are. Use what you have.  Do what you can.', 'Arthur Ashe'],
@@ -40,8 +47,8 @@
 
             var quote = quotes[Math.floor(Math.random() * quotes.length)];
 
-            document.getElementById('quote').innerText = quote[0];
-            document.getElementById('author').innerText = quote[1];
+            document.getElementsByTagName('q')[0].innerText = quote[0];
+            document.getElementsByTagName('cite')[0].innerText = ' — ' + quote[1];
         </script>
     </body>
 </html>
