Changed Github to GitHub.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav class="hidden-sm hidden-xs">
                 <h3>
                     <a target="_blank" class="pull-left" href="http://think.ankit.io">Blog</a>
-                    <a target="_blank" href="http://www.github.com/ankitr">Github</a>
+                    <a target="_blank" href="http://www.github.com/ankitr">GitHub</a>
                     <a target="_blank" class="pull-right" href="http://www.twitter.com/ankitr_">Twitter</a>
                 </h3>
             </nav>
