--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="icon" sizes="16x16 32x32 64x64" href="/img/favicons/favicon.ico">
+        <link rel="icon" type="image/png" sizes="196x196" href="/img/favicons/favicon-196.png">
+        <link rel="icon" type="image/png" sizes="160x160" href="/img/favicons/favicon-160.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/img/favicons/favicon-96.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="/img/favicons/favicon-64.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/img/favicons/favicon-152.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/favicon-144.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/img/favicons/favicon-120.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/img/favicons/favicon-114.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/img/favicons/favicon-76.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/favicon-72.png">
+        <link rel="apple-touch-icon" href="/img/favicons/favicon-57.png">
+        <meta name="msapplication-TileColor" content="#FFFFFF">
+        <meta name="msapplication-TileImage" content="/img/favicons/favicon-144.png">
+        <meta name="msapplication-config" content="/browserconfig.xml">
         <title>Ankit</title>
         <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.css">
