Added BTC address incase people like me.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         </section>
         <footer>
             <h4><q>If passion drives you, let reason hold the reins.</q> <cite> &mdash; Benjamin Franklin</cite></h4>
+            <br>
+            <div class="btc"><small>BTC: 1BRdTrG8EyTNPJxXveqD6E8ZmXwHy4dR6v</small></div>
         </footer>
         <script type="text/javascript">
             var quotes = [['If passion drives you, let reason hold the reins.', 'Benjamin Franklin'],
