Changed the quote emdash to be a ::before element in CSS.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </nav>
         </section>
         <footer>
-            <h4><q>If passion drives you, let reason hold the reins.</q> <cite> &mdash; Benjamin Franklin</cite></h4>
+            <h4><q>If passion drives you, let reason hold the reins.</q> <cite>Benjamin Franklin</cite></h4>
             <br>
             <div class="btc"><small>BTC: 1BRdTrG8EyTNPJxXveqD6E8ZmXwHy4dR6v</small></div>
         </footer>
@@ -68,7 +68,7 @@
             var quote = quotes[Math.floor(Math.random() * quotes.length)];
 
             document.getElementsByTagName('q')[0].innerText = quote[0];
-            document.getElementsByTagName('cite')[0].innerText = ' — ' + quote[1];
+            document.getElementsByTagName('cite')[0].innerText = quote[1];
         </script>
     </body>
 </html>
