Added some interesting links.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <section>
-            <h1>Ankit Ranjan</h1>
+            <h1><a class="secret" href="links.html">Ankit Ranjan</a></h1>
             <nav class="hidden-sm hidden-xs">
                 <h3>
                     <a target="_blank" class="pull-left" href="http://think.ankit.io">Blog</a>
