Renamed CSS to try and get things to work.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <title>Ankit</title>
         <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/app.css">
     </head>
     <body>
         <section>
