Changed the music section to link to Wikipedia. Turns out band/artist sites aren't great.

--- a/links.html
+++ b/links.html
@@ -57,15 +57,18 @@
             <li><a href="http://theoatmeal.com/">The Oatmeal</a></li>
         </ul>
         <h3>Music</h3>
+        <p>In no particular order:</p>
         <ul>
-            <li><a href="http://www.fadedpaperfigures.com/">Faded Paper Figures</a></li>
-            <li><a href="http://tokyopoliceclub.tumblr.com/">Tokyo Police Club</a></li>
-            <li><a href="http://dawestheband.com/">Dawes</a></li>
-            <li><a href="http://thexx.info/">The xx</a></li>
-            <li><a href="http://www.bandboston.com/">Boston</a></li>
-            <li><a href="http://atlasgenius.com/">Atlas Genius</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Faded_Paper_Figures">Faded Paper Figures</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Tokyo_Police_Club">Tokyo Police Club</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Dawes">Dawes</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/The_xx">The xx</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Boston_(band)">Boston</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Atlas_Genius">Atlas Genius</a></li>
             <li><a href="http://en.wikipedia.org/wiki/Alt-J">∆</a></li>
-            <li><a href="http://arcadefire.com/">Arcade Fire</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Arcade_fire">Arcade Fire</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Daft_Punk">Daft Punk</a></li>
+            <li><a href="http://en.wikipedia.org/wiki/Capital_Cities_(band)">Capital Cities</a></li>
             <li><a href="http://open.spotify.com/user/1234121699">And a lot more.</a></li>
         </ul>
     </section>
