Updated links to be nicer.

--- a/links.html
+++ b/links.html
@@ -34,43 +34,60 @@
     </style>
 </head>
 <body>
-    <section class="container ">
+    <div class="container">
         <h1>Links</h1>
         <p>Interesting places and things on the internet.</p>
-        <h3>Articles</h3>
-        <ul>
-            <li><a href="http://www.paulgraham.com/hp.html">Hackers and Painters</a> <cite>Paul Graham</cite></li>
-            <li><a href="http://www.catb.org/esr/faqs/hacker-howto.html">How to Become a Hacker</a> <cite>Eric Steven Raymond</cite></li>
-            <li><a href="http://tylermenezes.com/education">Education</a> <cite>Tyler Menezes</cite></li>
-            <li><a href="https://medium.com/better-humans/802c49b9141c">Don't Date a Girl that Travels</a> <cite>Adi</cite></li>
-            <li><a href="https://medium.com/i-m-h-o/ef84c505b511">The Anti-Dropout</a> <cite>Quinten Farmer</cite></li>
-            <li><a href="https://medium.com/life-learning/2a1841f1335d">7 Reasons Why You Will Never Do Anything Amazing With Your Life</a> <cite>Raymmar Tirado</cite></li>
-            <li><a href="http://youmightfindyourself.com/post/38624810934/joy-by-zadie-smith">Joy</a> <cite>Zadie Smith</cite></li>
-            <li><a href="http://www.strikemag.org/bullshit-jobs/">On the Phenomenon of Bullshit Jobs</a> <cite>David Graeber</cite></li>
-            <li><a href="https://www.byliner.com/read/margaret-atwood/attitude">Attitude</a> <cite>Margaret Atwood</cite></li>
-            <li><a href="http://moreintelligentlife.com/story/david-foster-wallace-in-his-own-words">This is water.</a> <cite>David Foster Wallace</cite></li>
-        </ul>
-        <h3>Webcomics</h3>
-        <ul>
-            <li><a href="http://xkcd.com/">xckd</a></li>
-            <li><a href="http://drawingboardcomic.com/">Drawing Board</a></li>
-            <li><a href="http://theoatmeal.com/">The Oatmeal</a></li>
-        </ul>
-        <h3>Music</h3>
-        <p>In no particular order:</p>
-        <ul>
-            <li><a href="http://en.wikipedia.org/wiki/Faded_Paper_Figures">Faded Paper Figures</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Tokyo_Police_Club">Tokyo Police Club</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Dawes">Dawes</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/The_xx">The xx</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Boston_(band)">Boston</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Atlas_Genius">Atlas Genius</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Alt-J">∆</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Arcade_fire">Arcade Fire</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Daft_Punk">Daft Punk</a></li>
-            <li><a href="http://en.wikipedia.org/wiki/Capital_Cities_(band)">Capital Cities</a></li>
-            <li><a href="http://open.spotify.com/user/1234121699">And a lot more.</a></li>
-        </ul>
-    </section>
+        <section>
+            <h3>Articles</h3>
+            <ul>
+                <li><a href="http://www.paulgraham.com/hp.html">Hackers and Painters</a> <cite>Paul Graham</cite></li>
+                <li><a href="http://www.catb.org/esr/faqs/hacker-howto.html">How to Become a Hacker</a> <cite>Eric Steven Raymond</cite></li>
+                <li><a href="http://tylermenezes.com/education">Education</a> <cite>Tyler Menezes</cite></li>
+                <li><a href="https://medium.com/better-humans/802c49b9141c">Don't Date a Girl that Travels</a> <cite>Adi</cite></li>
+                <li><a href="https://medium.com/i-m-h-o/ef84c505b511">The Anti-Dropout</a> <cite>Quinten Farmer</cite></li>
+                <li><a href="https://medium.com/life-learning/2a1841f1335d">7 Reasons Why You Will Never Do Anything Amazing With Your Life</a> <cite>Raymmar Tirado</cite></li>
+                <li><a href="http://youmightfindyourself.com/post/38624810934/joy-by-zadie-smith">Joy</a> <cite>Zadie Smith</cite></li>
+                <li><a href="http://www.strikemag.org/bullshit-jobs/">On the Phenomenon of Bullshit Jobs</a> <cite>David Graeber</cite></li>
+                <li><a href="https://www.byliner.com/read/margaret-atwood/attitude">Attitude</a> <cite>Margaret Atwood</cite></li>
+                <li><a href="http://moreintelligentlife.com/story/david-foster-wallace-in-his-own-words">This is water.</a> <cite>David Foster Wallace</cite></li>
+            </ul>
+        </section>
+        <section>
+            <h3>Music</h3>
+            <ul>
+                <li><a href="http://en.wikipedia.org/wiki/Alt-J">Alt-J</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Arcade_fire">Arcade Fire</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Arctic_Monkeys">Arctic Monkeys</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Atlas_Genius">Atlas Genius</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Avicii">Avicii</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Boston_(band)">Boston</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Calvin_Harris">Calvin Harris</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Capital_Cities_(band)">Capital Cities</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Coldplay">Coldplay</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Daft_Punk">Daft Punk</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Dawes">Dawes</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Faded_Paper_Figures">Faded Paper Figures</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/The_Killers">The Killers</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/The_Neighbourhood">The Neighbourhood</a></li>
+                <li><a href="http://music.ratsofnym.com/">NYM</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Oasis_(band)">Oasis</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/OneRepublic">OneRepublic</a></li>
+                <li><a href="http://www.overwerk.com/">OVERWERK</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Passion_Pit">Passion Pit</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Tokyo_Police_Club">Tokyo Police Club</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/Two_Door_Cinema_Club">Two Door Cinema Club</a></li>
+                <li><a href="http://en.wikipedia.org/wiki/The_xx">The xx</a></li>
+                <li><a href="http://open.spotify.com/user/1234121699">And a lot more.</a></li>
+            </ul>
+        </section>
+        <section>
+            <h3>Webcomics</h3>
+            <ul>
+                <li><a href="http://xkcd.com/">xckd</a></li>
+                <li><a href="http://drawingboardcomic.com/">Drawing Board</a></li>
+                <li><a href="http://theoatmeal.com/">The Oatmeal</a></li>
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
