Fixed xkcd typo.

--- a/links.html
+++ b/links.html
@@ -83,7 +83,7 @@
         <section>
             <h3>Webcomics</h3>
             <ul>
-                <li><a href="http://xkcd.com/">xckd</a></li>
+                <li><a href="http://xkcd.com/">xkcd</a></li>
                 <li><a href="http://drawingboardcomic.com/">Drawing Board</a></li>
                 <li><a href="http://theoatmeal.com/">The Oatmeal</a></li>
             </ul>
