--- a/index.html
+++ b/index.html
@@ -1,50 +1,28 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" href="/favicon.ico">
-        <link rel="icon" sizes="16x16 32x32 64x64" href="/img/favicons/favicon.ico">
-        <link rel="icon" type="image/png" sizes="196x196" href="/img/favicons/favicon-196.png">
-        <link rel="icon" type="image/png" sizes="160x160" href="/img/favicons/favicon-160.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="/img/favicons/favicon-96.png">
-        <link rel="icon" type="image/png" sizes="64x64" href="/img/favicons/favicon-64.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/img/favicons/favicon-152.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/favicon-144.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/img/favicons/favicon-120.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="/img/favicons/favicon-114.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/img/favicons/favicon-76.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/favicon-72.png">
-        <link rel="apple-touch-icon" href="/img/favicons/favicon-57.png">
-        <meta name="msapplication-TileColor" content="#FFFFFF">
-        <meta name="msapplication-TileImage" content="/img/favicons/favicon-144.png">
-        <meta name="msapplication-config" content="/browserconfig.xml">
-        <title>Ankit</title>
-        <link rel="stylesheet" type="text/css" href="css/vendor/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.css">
+        <title>ankit</title>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
         <link rel="stylesheet" type="text/css" href="css/app.css">
     </head>
     <body>
-        <section>
-            <h1><a class="secret" href="links.html">Ankit Ranjan</a></h1>
-            <nav class="hidden-sm hidden-xs">
-                <h3>
-                    <a target="_blank" class="pull-left" href="http://think.ankit.io">Blog</a>
-                    <a target="_blank" href="http://www.github.com/ankitr">GitHub</a>
-                    <a target="_blank" class="pull-right" href="http://www.twitter.com/ankitr_">Twitter</a>
-                </h3>
-            </nav>
-            <nav class="visible-sm visible-xs">
-                <h3><a target="_blank" href="http://think.ankit.io">Blog</a></h3>
-                <h3><a target="_blank" href="http://www.github.com/ankitr">Github</a></h3>
-                <h3><a target="_blank" href="http://www.twitter.com/ankitr_">Twitter</a></h3>
-            </nav>
+        <section id='faq'>
+            <h3>faq</h3>
+            <p class='q'>who are you?</p>
+            <p class='a'>ankit ranjan</p>
+            <p class='q'>where are you?</p>
+            <p class='a'>palo alto</p>
+            <p class='q'>how do i reach you?</p>
+            <p class='a'>by <a href="mailto:me@ankit.io">email</a></p>
+            <p class='q'>what do you do?</p>
+            <p class='a'>i'm taking suggestions</p>
         </section>
-        <footer>
-            <h4><q>If passion drives you, let reason hold the reins.</q> <cite>Benjamin Franklin</cite></h4>
-            <br>
-            <div class="btc"><small>BTC: 1BRdTrG8EyTNPJxXveqD6E8ZmXwHy4dR6v</small></div>
-        </footer>
-        <script type="text/javascript" src="js/app.js"></script>
+
+        <section id='ps'>
+            <h3>ps</h3>
+            <p><a href="http://ankit.svbtle.com">blog</a> <a href="http://www.last.fm/user/ankitranjan">music</a> <a href="https://github.com/ankitr">code</a></p>
+        </section>
     </body>
 </html>
+
