be more friendly

--- a/interrobang.html
+++ b/interrobang.html
@@ -4,7 +4,7 @@
         <meta http-equiv="refresh" content="0; url=https://ankit135.typeform.com/to/pIehei">
     </head>
     <body>
-        go away
+        Loading...
     </body>
 </html>
 
