--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <h3>ps</h3>
             <p><a href="http://ankit.svbtle.com">blog</a> <a href="http://www.last.fm/user/ankitranjan">music</a> <a href="https://github.com/ankitr">code</a></p>
         </section>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-41516705-1', 'auto');
+          ga('send', 'pageview');
+        </script> 
     </body>
 </html>
 
