--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section id='ps'>
             <h3>ps</h3>
-            <p><a href="http://ankit.svbtle.com">blog</a> <a href="http://www.last.fm/user/ankitranjan">music</a> <a href="https://github.com/ankitr">code</a></p>
+            <p><a href="http://ankit.svbtle.com">blog</a> <a href="http://www.last.fm/user/ankitranjan">music</a> <a href="https://github.com/ankitr">code</a> <a href="photos.html">photos</a></p>
         </section>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
