--- a/photos.html
+++ b/photos.html
@@ -19,5 +19,6 @@
         <img src="ph/6.jpg">
         <img src="ph/7.jpg">
         <img src="ph/8.jpg">
+        <p>remind me to figure out alt text sometime<p>
     </body>
 </html>
