--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section id='ps'>
             <h3>ps</h3>
-            <p>look at my <a href="http://ankit.svbtle.com">writing</a>, <a href="photos.html">photography</a>, and <a href="https://github.com/ankitr">code</a> </p>
+            <p>look at my <a href="http://ankit.svbtle.com">writing</a>, <a href="photos">photography</a>, and <a href="https://github.com/ankitr">code</a> </p>
         </section>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
