--- a/photos.html
+++ b/photos.html
@@ -8,26 +8,26 @@
     </head>
     <body>
         <h1>ankit's photos</h1>
-        <img src="ph/0.jpg" alt='a photograph'>
-        <div class='button-wrapper'>
-            <div class='buttons'>
-                <button class='left'>&lt;</button>
-                <button class='right'>&gt;</button>
-            </div>
-        </div>
+        <img src="ph/0.jpg" alt="a photograph">
+        <section class="button-wrapper">
+            <section class="buttons">
+                <button class="left">&lt;</button>
+                <button class="right">&gt;</button>
+            </section>
+        </section>
         <script>
           const COUNT = 114;
           const BUFFER = 5;
         </script>
         <script src="js/photos.js"></script>
-       	<script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||functi$
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElem$
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBef$
-          })(window,document,'script','https://www.google-analytics.com/analytics$
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
           ga('create', 'UA-41516705-1', 'auto');
-          ga('send', 'pageview');
+		  ga('send', 'pageview');
         </script>
     </body>
 </html>
