--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p class='q'>who are you?</p>
             <p class='a'>ankit ranjan</p>
             <p class='q'>where are you?</p>
-            <p class='a'>palo alto</p>
+            <p class='a'>palo alto/oxford</p>
             <p class='q'>how do i reach you?</p>
             <p class='a'>by <a href="mailto:me@ankit.io">email</a></p>
             <p class='q'>what do you do?</p>
