--- a/photos.html
+++ b/photos.html
@@ -7,9 +7,11 @@
         <link rel="stylesheet" type="text/css" href="css/photos.css">
     </head>
     <body>
-        <div class="photo-container">
+        <div class="page-container">
             <h1>ankit's photos</h1>
-            <img src="ph/0.jpg" alt="a photograph">
+            <div class="photo-container">
+                <img src="ph/0.jpg" alt="a photograph">
+            </div>
             <div class="button-wrapper">
                 <div class="buttons">
                     <button class="left">&lt;</button>
@@ -18,7 +20,7 @@
             </div>
         </div>
         <script>
-          const COUNT = 16;
+          const COUNT = 19;
           const BUFFER = 5;
         </script>
         <script src="js/photos.js"></script>
