--- a/photos.html
+++ b/photos.html
@@ -14,8 +14,8 @@
             </div>
             <div class="button-wrapper">
                 <div class="buttons">
-                    <button class="left">&lt;</button>
-                    <button class="right">&gt;</button>
+                    <button class="left"><div class="button-inner">&#9664;</div></button>
+                    <button class="right"><div class="button-inner">&#9654;</div></button>
                 </div>
             </div>
         </div>
