--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>ankit</title>
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-    </head>
-    <body>
-        <section id='faq'>
-            <h3>faq</h3>
-            <p class='q'>who are you?</p>
-            <p class='a'>ankit ranjan</p>
-            <p class='q'>where are you?</p>
-            <p class='a'>palo alto/oxford</p>
-            <p class='q'>how do i reach you?</p>
-            <p class='a'>by <a href="mailto:me@ankit.io">email</a></p>
-            <p class='q'>what do you do?</p>
-            <p class='a'>take suggestions</p>
+  <head>
+    <meta charset="utf-8">
+    <title>Ankit Ranjan</title>
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <div class="social-icons">
+          <a href="mailto:me@ankit.io" class="fas fa-envelope"></a>
+          <a href="https://twitter.com/ankitr_" class="fab fa-twitter"></a>
+          <a href="https://linkedin.com/in/ranjanankit" class="fab fa-linkedin"></a>
+          <a href="https://github.com/ankitr" class="fab fa-github"></a>
+        </div>
+        <h1>Ank<a href="old" class="secret">i</a>t Ranjan</h1>
+        <h3>Neuroscience and Machine Learning</h3>
+      </header>
+      <section class="main">
+        <img class="me" src="me.jpg" alt="A picture of me.">
+        <section id="intro">
+          <p>I'm an undergraduate in my last year at the University of Oxford studying Neuroscience. I am also a visiting student working with the <a href="http://cameraculture.media.mit.edu/">Camera Culture group at MIT Media Lab</a>, and an undergraduate researcher at the <a href="https://www.nds.ox.ac.uk/research/oxford-functional-neurosurgery">Oxford Functional Neurosurgery group</a>.</p>
+          <p>I'm interested in using computational approaches to better understand the brain. Right now, this means working on methods to reconstruct targets inside dense scattering media and modelling the neural circuits in the spine which allow us to walk.</p>
+          <p>You can generally find me in Oxford, Palo Alto, or Boston. <a href="mailto:me@ankit.io">Drop me a line</a> if you're around.</p>
         </section>
-
-        <section id='ps'>
-            <h3>ps</h3>
-            <p>look at my <a href="http://ankit.svbtle.com">writing</a>, <a href="photos">photography</a>, and <a href="https://github.com/ankitr">code</a> </p>
+        <section id="work">
+          <h2>Work Experience</h2>
+          <p>I worked at Retool, Emerson Collective, Coda, and Metanautix as a web developer through high school and college. I'm a licensed EMT, registered in the state of California.</p>
+          <p><a href="cv.pdf" download>Curriculum Vitae</a></p>
         </section>
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        
-          ga('create', 'UA-41516705-1', 'auto');
-          ga('send', 'pageview');
-        </script> 
-    </body>
+        <section id="misc">
+          <h2>Other stuff</h2>
+          <p>Have a look at my <a href="https://words.ankit.io/">writing</a> and <a href="photos">photography</a>.</p>
+        </section>
+      </section>
+    </div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.js" data-no-instant></script>
+    <script data-no-instant>InstantClick.init();</script>
+  </body>
 </html>
-
