open social links in new tabs

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
       <header>
         <div class="social-icons">
-          <a href="mailto:me@ankit.io" class="fas fa-envelope"></a>
-          <a href="https://twitter.com/ankitr_" class="fab fa-twitter"></a>
-          <a href="https://linkedin.com/in/ranjanankit" class="fab fa-linkedin"></a>
-          <a href="https://github.com/ankitr" class="fab fa-github"></a>
+          <a target="_blank" href="mailto:me@ankit.io" class="fas fa-envelope"></a>
+          <a target="_blank" href="https://twitter.com/ankitr_" class="fab fa-twitter"></a>
+          <a target="_blank" href="https://linkedin.com/in/ranjanankit" class="fab fa-linkedin"></a>
+          <a target="_blank" href="https://github.com/ankitr" class="fab fa-github"></a>
         </div>
         <h1>Ank<a href="old" class="secret">i</a>t Ranjan</h1>
         <h3>Neuroscience and Machine Learning</h3>
