--- a/index.html
+++ b/index.html
@@ -17,19 +17,13 @@
           <a target="_blank" href="https://github.com/ankitr" class="fab fa-github"></a>
         </div>
         <h1>Ank<a href="old" class="secret">i</a>t Ranjan</h1>
-        <h3>Neuroscience and Machine Learning</h3>
+        <h3>Building Neural Interfaces</h3>
       </header>
       <section class="main">
         <img class="me" src="me.jpg" alt="A picture of me.">
         <section id="intro">
-          <p>I'm an undergraduate in my last year at the University of Oxford studying Neuroscience. I am also a visiting student working with the <a href="http://cameraculture.media.mit.edu/">Camera Culture group at MIT Media Lab</a>, and an undergraduate researcher at the <a href="https://www.nds.ox.ac.uk/research/oxford-functional-neurosurgery">Oxford Functional Neurosurgery group</a>.</p>
-          <p>I'm interested in using computational approaches to better understand the brain. Right now, this means working on methods to reconstruct targets inside dense scattering media and modelling the neural circuits in the spine which allow us to walk.</p>
+          <p>I'm a DPhil candidate at the University of Oxford, working with the <a href="https://www.nds.ox.ac.uk/research/oxford-functional-neurosurgery">Oxford Functional Neurosurgery group</a>.</p>
           <p>You can generally find me in Oxford, Palo Alto, or Boston. <a href="mailto:me@ankit.io">Drop me a line</a> if you're around.</p>
-        </section>
-        <section id="work">
-          <h2>Work Experience</h2>
-          <p>I worked at Retool, Emerson Collective, Coda, and Metanautix as a web developer through high school and college. I'm a licensed EMT, registered in the state of California.</p>
-          <p><a href="cv.pdf" download>Curriculum Vitae</a></p>
         </section>
         <section id="misc">
           <h2>Other stuff</h2>
